# vettore

./: .gitignore  .tool-versions  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  Taskfile.yml  checksum-Elixir.Vettore.Nifs.exs  checksum-Elixir.Vettore.exs  mix.exs
.github/workflows/: ci.yml  main.yml
bench/: ets_owner_bench.exs  ets_read_bench.exs  performance.md  search_modes_bench.exs  vettore_bench.exs
lib/: vector.ex  vettore.ex  vettore_distance.ex  vettore_embedding.ex  vettore_nifs.ex
lib/vettore/: application.ex  collection.ex  db.ex  ets_owner.ex  index.ex  multi_vector.ex  postgres.ex  result.ex  store.ex  vettore_distance.ex  vettore_embedding.ex  vettore_validator.ex
lib/vettore/encoding/: muvera.ex
lib/vettore/index/: flat.ex  hnsw.ex
lib/vettore/store/: ets.ex
native/vettore/: Cargo.toml  README.md
native/vettore/.cargo/: config.toml
native/vettore/src/: db.rs  distances.rs  flat.rs  hnsw.rs  lib.rs  mmr.rs  multi_vector.rs  muvera.rs  nifs.rs  search.rs  simd_utils.rs  similarity.rs  types.rs
test/: doctest_test.exs  ex_fastembed_integration_test.exs  vector_adversarial_test.exs  vector_algorithms_hardening_test.exs  vector_db_test.exs  vector_distance_test.exs  vector_hardening_test.exs  vector_integration_test.exs  vector_multi_col_test.ex  vector_store_compat_test.exs  vector_test.exs  vettore_db_test.exs  vettore_distance_test.exs  vettore_errors_test.exs  vettore_multi_col_test.exs
test/support/: data.json  test_data.ex
