[package]
name = "vettore"
version = "0.1.11"
authors = []
edition = "2021"

[lib]
name = "vettore"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bitvec = "1.0.1"
parking_lot = "0.12.3"
rand = "0.9.0"
rayon = { version = "1.10.0", optional = true }
rustler = "0.36.1"
smallvec = "1.15.0"
wide = "0.7.32"

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
strip = "debuginfo"

[features]
default = [] 
parallel = ["rayon"]  # enable with `--features parallel`
