[package]
name = "vettore"
version = "0.3.2"
authors = []
edition = "2021"
rust-version = "1.91"

[lib]
name = "vettore"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.38.0", default-features = false }
wide = "1.5.0"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]

[profile.release]
codegen-units = 1
lto = true
panic = "unwind"
strip = "debuginfo"
